k8s/whoami-deployment/whoami-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: whoami-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami
