k8s/whoami-deployment/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami-service
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: whoami
  selector:
    app: whoami
