k8s/whoami-deployment/whoami-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: whoami-service
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: k8s.beyondthestatic.com
      hosts:
        - k8s.beyondthestatic.com
  rules:
  - host: k8s.beyondthestatic.com
    http:
      paths:
      - pathType: Prefix
        path: /whoami
        backend:
          service:
            name: whoami
            port:
              number: 80
